bk_ida/gccida/c3/maybe_eliminate_biv
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv/src/loop.c:8982:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)v19->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv/src/loop.c:9035:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)v11->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv/src/loop.c:9080:23: error: use of undeclared identifier 'off_71A333'
v25 = ( const char *)&off_71A333; 
                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv/src/obj/loop.o] Error 1
